// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Variable Reflection should compile object with symbol: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [Exports](../exports.md)

***

# Variable: objectWithSymbol

> **\`const\`** **objectWithSymbol**: \`Object\`

Comments variable with symbol

## Type declaration

### [sym]

> **[sym]**: \`string\` = \`'value'\`

## Source

[variables.ts:50](http://source-url)
"
`;

exports[`Variable Reflection should compile object with symbol: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [Exports](../index.md)

***

# objectWithSymbol

\`\`\`ts
const objectWithSymbol: {
  [sym]: string;
};
\`\`\`

Comments variable with symbol

## Type declaration

| Member | Type | Description |
| :------ | :------ | :------ |
| \`[sym]\` | \`string\` | - |
"
`;

exports[`Variable Reflection should compile type operator variable: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [Exports](../exports.md)

***

# Variable: typeOperatorVariable

> **\`const\`** **typeOperatorVariable**: unique \`symbol\`

Comments for typeOperatorVariable

## Source

[variables.ts:13](http://source-url)
"
`;

exports[`Variable Reflection should compile type operator variable: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [Exports](../index.md)

***

# typeOperatorVariable

\`\`\`ts
const typeOperatorVariable: unique symbol;
\`\`\`

Comments for typeOperatorVariable
"
`;

exports[`Variable Reflection should compile variable assigned to a string: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [Exports](../exports.md)

***

# Variable: stringVariable

> **\`const\`** **stringVariable**: \`"stringConstWithDefaultValue"\` = \`'stringConstWithDefaultValue'\`

A simple string variable

## Source

[variables.ts:8](http://source-url)
"
`;

exports[`Variable Reflection should compile variable assigned to a string: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [Exports](../index.md)

***

# stringVariable

\`\`\`ts
const stringVariable: "stringConstWithDefaultValue" = 'stringConstWithDefaultValue';
\`\`\`

A simple string variable
"
`;

exports[`Variable Reflection should compile variable assigned to an object literal: (Output File Strategy "members") (Option Group "1") 1`] = `
"**typedoc-stubs** • [Readme](../index.md) \\| [Exports](../exports.md)

***

# Variable: objectLiteralVariable

> **\`const\`** **objectLiteralVariable**: \`Object\`

Comments for objectLiteralVariable

## Type declaration

### \\*

> **\\***: \`string\` = \`'*'\`

### \\*foo\\*

> **\\*foo\\***: \`string\` = \`'*foo*'\`

### \\<

> **\\<**: \`string\` = \`'<'\`

### \\<foo

> **\\<foo**: \`string\` = \`'<foo'\`

### \\<foo\\>

> **\\<foo\\>**: \`string\` = \`'<foo>'\`

### \\>

> **\\>**: \`string\` = \`'>'\`

### \\_

> **\\_**: \`string\` = \`'_'\`

### \\_foo\\_

> **\\_foo\\_**: \`string\` = \`'_foo_'\`

### prop\\_with\\_underscore

> **prop\\_with\\_underscore**: \`string\` = \`'prop_with_underscore'\`

### prop\\|with\\|pipes

> **prop\\|with\\|pipes**: \`string\` = \`'prop|with|pipes'\`

### valueA

> **valueA**: \`number\` = \`100\`

### valueB

> **valueB**: \`boolean\` = \`true\`

### valueX

> **valueX**: \`Object\`

### valueX.valueA

> **valueX.valueA**: \`number\`[]

### valueX.valueY

> **valueX.valueY**: (\`z\`) => \`Object\`

#### Parameters

• **z**: \`string\`

#### Returns

\`Object\`

> ##### a
>
> > **a**: \`string\` = \`'test'\`
>
> ##### b
>
> > **b**: \`string\` = \`z\`
>
> ##### c
>
> > **c**: \`Object\`
>
> ##### c.a
>
> > **c.a**: \`number\` = \`1\`
>
> ##### c.b
>
> > **c.b**: \`number\` = \`2\`
>

### valueX.valueZ

> **valueX.valueZ**: \`string\` = \`'foo'\`

### valueY

> **valueY**: (\`unionParam\`, \`_undercoreParam_\`) => \`string\`

#### Parameters

• **unionParam**: \`"a"\` \\| \`"b"\`

• **\\_undercoreParam\\_**: \`string\`

#### Returns

\`string\`

### \\|

> **\\|**: \`string\` = \`'|'\`

### ~

> **~**: \`string\` = \`'~'\`

## Source

[variables.ts:18](http://source-url)
"
`;

exports[`Variable Reflection should compile variable assigned to an object literal: (Output File Strategy "members") (Option Group "2") 1`] = `
"**typedoc-stubs** • [Exports](../index.md)

***

# objectLiteralVariable

\`\`\`ts
const objectLiteralVariable: {
  *: string;
  *foo*: string;
  <: string;
  <foo: string;
  <foo>: string;
  >: string;
  _: string;
  _foo_: string;
  prop_with_underscore: string;
  prop|with|pipes: string;
  valueA: number;
  valueB: boolean;
  valueX: {
     valueA: number[];
     valueY: (z) => {
        a: string;
        b: string;
        c: {
           a: number;
           b: number;
        };
     };
     valueZ: string;
  };
  valueY: (unionParam, _undercoreParam_) => string;
  |: string;
  ~: string;
};
\`\`\`

Comments for objectLiteralVariable

## Type declaration

| Member | Type | Description |
| :------ | :------ | :------ |
| \`*\` | \`string\` | - |
| \`*foo*\` | \`string\` | - |
| \`<\` | \`string\` | - |
| \`<foo\` | \`string\` | - |
| \`<foo>\` | \`string\` | - |
| \`>\` | \`string\` | - |
| \`_\` | \`string\` | - |
| \`_foo_\` | \`string\` | - |
| \`prop_with_underscore\` | \`string\` | - |
| prop\\|with\\|pipes | \`string\` | - |
| \`valueA\` | \`number\` | - |
| \`valueB\` | \`boolean\` | - |
| \`valueX\` | \\{   \`valueA\`: \`number\`[];   \`valueY\`: (\`z\`) => \\{      \`a\`: \`string\`;      \`b\`: \`string\`;      \`c\`: \\{         \`a\`: \`number\`;         \`b\`: \`number\`;      };   };   \`valueZ\`: \`string\`;   } | - |
| \`valueX.valueA\` | \`number\`[] | - |
| \`valueX.valueY\` | (\`z\`) => \\{   \`a\`: \`string\`;   \`b\`: \`string\`;   \`c\`: \\{      \`a\`: \`number\`;      \`b\`: \`number\`;   };   } | - |
| \`valueX.valueZ\` | \`string\` | - |
| \`valueY\` | (\`unionParam\`, \`_undercoreParam_\`) => \`string\` | - |
| \\| | \`string\` | - |
| \`~\` | \`string\` | - |
"
`;
